--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -27,12 +28,14 @@
     "@types/glob": "^7.1.2",
     "@types/node": "^14.0.13",
     "husky": "^4.2.5",
+    "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "typescript": "^3.9.5"
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS --extends @commitlint/config-conventional"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS --extends @commitlint/config-conventional",
+      "pre-commit": "npm run lint"
     }
   },
   "dependencies": {
