--- a/package.json
+++ b/package.json
@@ -23,21 +23,22 @@
   },
   "homepage": "https://github.com/thomasthiebaud/fastify-schema-to-typescript#readme",
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.7",
     "@semantic-release/npm": "^7.0.5",
     "@semantic-release/release-notes-generator": "^9.0.1",
-    "@types/glob": "^7.1.2",
-    "@types/node": "^14.0.13",
+    "@types/glob": "^7.1.3",
+    "@types/node": "^14.6.0",
+    "fastify": "^3.2.1",
     "husky": "^4.2.5",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.0.8",
-    "typescript": "^3.9.5"
+    "semantic-release": "^17.1.1",
+    "typescript": "^3.9.7"
   },
   "husky": {
     "hooks": {
@@ -46,11 +47,11 @@
     }
   },
   "dependencies": {
-    "commander": "^5.1.0",
+    "commander": "^6.0.0",
     "glob": "^7.1.6",
-    "json-schema-to-typescript": "^9.1.0"
+    "json-schema-to-typescript": "^9.1.1"
   },
   "peerDependencies": {
-    "fastify": "^2.14.1"
+    "fastify": "^3.2.1"
   }
 }
