--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
     "lint": "prettier --check .",
-    "lint:fix": "prettier --write ."
+    "lint:fix": "prettier --write .",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -32,12 +33,15 @@
     "@semantic-release/npm": "^7.0.5",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/glob": "^7.1.3",
+    "@types/jest": "^26.0.10",
     "@types/node": "^14.6.0",
     "fastify": "^3.2.1",
     "husky": "^4.2.5",
+    "jest": "^26.4.0",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.1.1",
+    "ts-jest": "^26.2.0",
     "typescript": "^3.9.7"
   },
   "husky": {
