--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.10",
+    "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.6.0",
     "fastify": "^3.2.1",
     "husky": "^4.2.5",
@@ -53,6 +54,7 @@
   "dependencies": {
     "commander": "^6.0.0",
     "glob": "^7.1.6",
+    "js-yaml": "^3.14.0",
     "json-schema-to-typescript": "^9.1.1"
   },
   "peerDependencies": {
