--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Convert json schema for Fastify to typescript interface",
   "main": "./dist/index.js",
   "bin": {
-    "fastify-schema-to-typescript": "./bin/fastify-schema-to-typescript.js"
+    "fastify-schema-to-typescript": "./dist/cli.js"
   },
   "scripts": {
     "clean": "rimraf ./dist",
@@ -36,13 +36,14 @@
     "@types/jest": "^26.0.10",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.6.0",
-    "fastify": "^3.2.1",
+    "fastify": "^3.7.0",
     "husky": "^4.2.5",
-    "jest": "^26.4.0",
+    "jest": "^26.6.3",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.1.1",
     "ts-jest": "^26.2.0",
+    "ts-node": "^9.0.0",
     "typescript": "^3.9.7"
   },
   "husky": {
