--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fastify-schema-to-typescript": "./dist/src/cli.js"
   },
   "scripts": {
+    "postinstall": "husky install",
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
     "lint": "prettier --check .",
@@ -24,39 +25,33 @@
   },
   "homepage": "https://github.com/thomasthiebaud/fastify-schema-to-typescript#readme",
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.0",
-    "@semantic-release/npm": "^7.0.9",
+    "@semantic-release/npm": "^7.0.10",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.20",
     "@types/js-yaml": "^4.0.0",
-    "@types/node": "^14.14.21",
-    "fastify": "^3.10.1",
-    "husky": "^4.3.8",
+    "@types/node": "^14.14.31",
+    "fastify": "^3.13.0",
+    "husky": "^5.1.3",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.3.3",
-    "ts-jest": "^26.4.4",
+    "semantic-release": "^17.4.1",
+    "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS --extends @commitlint/config-conventional",
-      "pre-commit": "npm run lint"
-    }
+    "typescript": "^4.2.3"
   },
   "dependencies": {
-    "commander": "^7.0.0",
+    "commander": "^7.1.0",
     "glob": "^7.1.6",
     "js-yaml": "^4.0.0",
-    "json-schema-to-typescript": "^10.1.2"
+    "json-schema-to-typescript": "^10.1.3"
   },
   "peerDependencies": {
     "fastify": "^3.2.1"
