--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "scripts": {
     "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable",
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
     "lint": "prettier --check .",
@@ -40,6 +42,7 @@
     "fastify": "^3.13.0",
     "husky": "^5.1.3",
     "jest": "^26.6.3",
+    "pinst": "^2.1.6",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.4.1",
