--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "bin": {
     "fastify-schema-to-typescript": "./dist/src/cli.js"
   },
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "scripts": {
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
@@ -27,36 +30,36 @@
   },
   "homepage": "https://github.com/thomasthiebaud/fastify-schema-to-typescript#readme",
   "devDependencies": {
-    "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^12.1.4",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/npm": "^7.1.3",
-    "@semantic-release/release-notes-generator": "^9.0.2",
-    "@types/glob": "^7.1.3",
-    "@types/jest": "^26.0.23",
-    "@types/js-yaml": "^4.0.1",
-    "@types/node": "^15.12.2",
-    "fastify": "3.17.0",
-    "husky": "^6.0.0",
-    "jest": "^27.0.4",
+    "@semantic-release/release-notes-generator": "^9.0.3",
+    "@types/glob": "^7.1.4",
+    "@types/jest": "^26.0.24",
+    "@types/js-yaml": "^4.0.2",
+    "@types/node": "^16.4.13",
+    "fastify": "3.20.1",
+    "husky": "^7.0.1",
+    "jest": "^27.0.6",
     "pinst": "^2.1.6",
-    "prettier": "^2.3.1",
+    "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.4.3",
-    "ts-jest": "^27.0.3",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+    "semantic-release": "^17.4.4",
+    "ts-jest": "^27.0.4",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
-    "commander": "^7.2.0",
+    "commander": "^8.1.0",
     "glob": "^7.1.7",
     "js-yaml": "^4.1.0",
     "json-schema-to-typescript": "^10.1.4"
   },
   "peerDependencies": {
-    "fastify": "^3.17.0"
+    "fastify": "^3.20.1"
   }
 }
