--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,6 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
 name: Node.js Package
 
-on: push
+on: [push, pull_request]
 
 jobs:
   build:
@@ -16,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: ${{ node.node-version }}
-          cache: 'npm'
+          cache: "npm"
       - run: npm ci
       - run: npm lint
       - run: npm test
@@ -32,8 +29,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: ${{ node.node-version }}
-          registry-url: 'https://registry.npmjs.org'
-          cache: 'npm'
+          registry-url: "https://registry.npmjs.org"
+          cache: "npm"
       - run: npm ci
       - run: npm run build
       - run: npx semantic-release
