--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "node": ">=14.0.0"
   },
   "scripts": {
-    "postinstall": "husky install",
-    "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable",
+    "prepare": "husky install",
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
     "lint": "prettier --check .",
@@ -30,31 +28,30 @@
   },
   "homepage": "https://github.com/thomasthiebaud/fastify-schema-to-typescript#readme",
   "devDependencies": {
-    "@commitlint/cli": "^16.0.1",
-    "@commitlint/config-conventional": "^16.0.0",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.2",
-    "@semantic-release/npm": "^8.0.3",
+    "@semantic-release/github": "^8.0.4",
+    "@semantic-release/npm": "^9.0.1",
     "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/glob": "^7.2.0",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^27.4.1",
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "^17.0.8",
-    "fastify": "^3.25.3",
+    "@types/node": "^17.0.23",
+    "fastify": "^3.27.4",
     "husky": "^7.0.4",
-    "jest": "^27.4.7",
-    "pinst": "^2.1.6",
-    "prettier": "^2.5.1",
+    "jest": "^27.5.1",
+    "prettier": "^2.6.1",
     "rimraf": "^3.0.2",
-    "semantic-release": "^18.0.1",
-    "ts-jest": "^27.1.2",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "semantic-release": "^19.0.2",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "commander": "^8.3.0",
+    "commander": "^9.1.0",
     "glob": "^7.2.0",
     "js-yaml": "^4.1.0",
     "json-schema-to-typescript": "^10.1.5"
