--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "prepare": "husky install",
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
-    "lint": "prettier --check .",
-    "lint:fix": "prettier --write .",
+    "lint": "eslint '**/*.ts' '**/*mjs'",
+    "lint:fix": "npm run lint -- --fix",
     "test": "jest"
   },
   "repository": {
@@ -43,12 +43,12 @@
     "fastify": "^3.29.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
     "semantic-release": "^22.0.12",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.17.0"
   },
   "dependencies": {
     "commander": "^11.1.0",
