--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
     "lint": "eslint '**/*.ts' '**/*mjs'",
@@ -41,7 +41,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.10.4",
     "fastify": "^3.29.0",
-    "husky": "^8.0.3",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "semantic-release": "^22.0.12",
